# imServer/account/models.py
@@ -1,4 +1,5 @@
 from django.db import models
+from system.storage import ImageStorage
 
 # Create your models here.
 
@@ -9,7 +10,8 @@ class User(models.Model):
     Phone = models.CharField(max_length = 15)
     Email = models.CharField(max_length = 30)
     Nickname = models.CharField(max_length = 20)
-    Avator = models.CharField(max_length = 100)
+    # Avatar = models.CharField(max_length = 100)
+    Avatar = models.ImageField(upload_to = 'avatar', storage = ImageStorage(), default = 'avatar/default.jpg') 
     Description = models.CharField(max_length = 40)
 
     def __str__(self):
